# jikan-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  rustfmt.toml
src/: api.rs  client.rs  error.rs  lib.rs  types.rs
src/api/: anime.rs  client.rs  endpoint.rs  error.rs  page.rs  query.rs  query_params.rs  utils.rs
src/api/anime/: anime.rs  anime_full.rs  characters.rs  episode.rs  episodes.rs  external.rs  forum.rs  more_info.rs  news.rs  pictures.rs  recommendations.rs  relations.rs  reviews.rs  search.rs  staff.rs  statistics.rs  streaming.rs  themes.rs  user_updates.rs  videos.rs  videos_episodes.rs
src/types/: anime.rs  common.rs
