[package]
name = "jikan-rs"
version = "0.1.0"
edition = "2024"
authors = ["Dmitriy Kholkin <ataraxiadev@ataraxiadev.com>"]
description = "A wrapper for the jikan.moe REST API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AtaraxiaSjel/jikan-rs"

[dependencies]
async-trait = "0.1.85"
bytes = "1.9.0"
derive_builder = "0.20.2"
form_urlencoded = "1.2.1"
futures = "0.3.31"
http = "1.2.0"
iso8601-timestamp = { version = "0.3.3", features = ["verify"] }
log = "0.4.22"
page-turner = "1.0.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_urlencoded = "0.7.1"
thiserror = "2.0.10"
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.3"
